refactor: apply Alibaba Java P3C coding standards across codebase
- Formatting: split @Getter @Setter onto separate lines in all entity classes
- Enums: expand single-line enums (DocumentStatus, KnowledgeBaseStatus) to one value per line
- Dead code: remove @Getter/@AllArgsConstructor from DocumentStatus (no fields)
- Comments: remove WHAT-describing comments from IngestionConsumer constants and ChatService
- Visibility: make ChatService.buildContext() private (internal helper)
- Constants: extract DEFAULT_TOP_K=5 to ChatRequest; extract message role string literals
  ("role"/"user"/"assistant"/"content") to package-visible constants in ChatService
- Null-safe: flip role.equals("user") to "user".equals(role)
- Stream API: replace Collectors.toList() with .toList() (Java 16+)
- Efficiency: remove redundant explicit save() on managed JPA entities in
  ConversationPersistenceService and KnowledgeBaseService.update()
- Bulk delete: replace N+1 forEach document delete with @Modifying JPQL query;
  replace getById() existence check in delete() with existsById()
- Single save: pre-assign UUID in DocumentUploadService so filePath is set at
  construction time, reducing document upload from two saves to one
- Security: remove hardcoded API key fallback from application.yml; set show-sql=false
- Package: move GlobalExceptionHandler to com.majm.rag.common sub-package

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>